2008-03-26 David Moore  <dcm@acm.org>
	* SVN 554: Fix build of Juju when in separate dir

2008-03-16 David Moore  <dcm@acm.org>
	* SVN 553: Update NEWS
	* SVN 552: Add function dc1394_capture_is_frame_corrupt() to test if
		   a dequeued frame is corrupt.  Integrity checking code
		   currently exists only on Mac OS.  Other platforms return
		   DC1394_FALSE.

2008-03-12 David Moore  <dcm@acm.org>
	* SVN 551: Automatically resume dequeue() if EINTR is encountered.
	* SVN 550: Bug fix dc1394_camera_get_node on Juju and Linux.
	* SVN 549: Implement dc1394_camera_get_node for Mac OS.

2008-03-11 David Moore  <dcm@acm.org>
	* SVN 548: Make linux-specific function dc1394_camera_get_node()
	           globally available and implement stubs for other platforms.
		   Add generation argument to dc1394_camera_get_node.
		   Rename dc1394_camera_get_port to
		   dc1394_camera_get_linux_port.

2008-03-10 David Moore  <dcm@acm.org>
	* SVN 547: On Linux, use a different DMA file descriptor for each
		   camera on the same controller.

2008-02-28 David Moore  <dcm@acm.org>
	* SVN 546: On Mac OS, scan received iso packet headers and drop
		   frames with any errors.

2008-02-25 David Moore  <dcm@acm.org>
	* SVN 545: Do usleep(500) between read/write retries on juju.
	* SVN 544: Fix the debug log handler so it produces output.

2008-02-21 David Moore  <dcm@acm.org>
	* SVN 543: Correct the order of operations at the start of juju
	           capture so that any manual channel settings are preserved.

2008-02-12 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 542: Return an error if the camera enumeration fails (thanks to
	           Jasper Leemans)

2008-02-10 Peter Antoniac http://sourceforge.net/users/theseinfeld
	* SVN 541: Corrections in the man pages white spaces
	* SVN 540: Added man pages to make install and to make dist

2008-02-07 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 539: Add linux functions to get port and node. This is